# clash-frontend

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: MainWindow.h
src/: ClashControlBot.cc  MainWindow.cpp
